--- a/tomonotomo/templates/tomonotomo/email-source.html
+++ b/tomonotomo/templates/tomonotomo/email-source.html
@@ -462,6 +462,7 @@
                         	<tr>
                             	<td align="center" valign="top">
                                     <!-- // Begin Template Body \\ -->
+					{% if lefttitle %}
                                 	<table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody">
                                     	<tbody><tr>
                                         	<td valign="top" width="280" class="leftColumnContent">
@@ -477,12 +478,14 @@
                                                         </td>
                                                     </tr>
                                                 </tbody></table>
+					{% endif %}
                                                 <!-- // End Module: Top Image with Content \\ -->
                                             
                                             </td>
                                         	<td valign="top" width="280" class="rightColumnContent">
                                             
                                                 <!-- // Begin Module: Top Image with Content \\ -->
+						{% if righttitle %}
                                                 <table border="0" cellpadding="20" cellspacing="0" width="100%">
                                                     <tbody><tr mc:repeatable="">
                                                         <td valign="top" style="text-align:center">
@@ -494,6 +497,7 @@
                                                         </td>
                                                     </tr>
                                                 </tbody></table>
+						{% endif %}
                                                 <!-- // End Module: Top Image with Content \\ -->
                                             
                                             </td>
