--- a/tomonotomo/templates/404.html
+++ b/tomonotomo/templates/404.html
@@ -14,7 +14,7 @@
 			<h3> Something did not work. The page does not exist or you do not have permission. Please contact the administrator at admin 'at' tomonotomo.com</h3><br/>
 
             <div>
-                <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a><br/><br/>
+                <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=https://www.tomonotomo.com" class="btn btn-large"><h3 style="color:white">Invite Friends</h3></a><br/><br/>
 		<a href="{% url "index" %}" class="btn btn-large"><h3 style="color:white">Go to Home Page</h3></a>
 			</div>
             <br/>
