--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -237,7 +237,7 @@ $(window).load(function(){
 	{% if notify_invite_friends %}
 	$.gritter.add({
 		title: '<br/>Help Tomonotomo be more awesome - Invite Friends',
-		text: '<span style="font-size:120%">You do not have enough friends on tomonotomo? To expand your reach and possibly find a match, <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=http://www.tomonotomo.com" target="_blank">"Invite your Friends"</a> on board</span>',
+		text: '<span style="font-size:120%">You do not have enough friends on tomonotomo? To expand your reach and possibly find a match, <a href="https://www.facebook.com/dialog/apprequests?app_id=1398031667088132&message=Connect%20to%20Friends%20of%20Friends%20-%20A%20new%20approach%20to%20online%20dating&redirect_uri=https://www.tomonotomo.com" target="_blank">"Invite your Friends"</a> on board</span>',
 		class_name: 'gritter-light',
 		time: 20000
 	});
