--- a/tomonotomo/templates/tomonotomo/email-notification.html
+++ b/tomonotomo/templates/tomonotomo/email-notification.html
@@ -108,7 +108,7 @@
 									<br>
 																<strong>Our mailing address is:</strong>
 																<br>
-76, Vrindavan Vihar, Ajmer Road, Jaipur, Rajasthan, India                                                            </div>
+6A, Urbana 38, 38 Ko Shing Road, Sheung Wan, Hong Kong                                                            </div>
                                                         </td>
                                                         <td valign="top" width="190" style="border-collapse: collapse;">
                                                           
