--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -74,7 +74,7 @@
 			<div class="page_block" style="margin:0px;">
 				<img src="https://graph.facebook.com/{{ fbid }}/picture?width=300&height=300" alt="" style="width:99%;height:auto;min-height:64px;">
 				<div class="clear"></div>
-				<span style="text-align:center">
+				<span style="text-align:center" id="srcpage-tomonotomo">
 					<a href="https://facebook.com/{{ fbid }}" target="_blank">{{ fullname }}'s Facebook Page</a>
 				</span>
 			</div>
