--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -1,5 +1,6 @@
 {% load url from future %}
 {% load staticfiles %}
+{% load compress %}
 
 <html xmlns:fb="http://ogp.me/ns/fb#" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -9,26 +10,36 @@
 <meta property="fb:admins" content="717323242"/>
 <meta property="fb:app_id" content="1398031667088132"/>
 <meta property="og:type" content="website"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 {% include 'meta.html' %}
 
-
-<link rel="stylesheet" type="text/css" media="screen" href="{% static 'tomonotomo/css/style.css' %}">
+<link rel="stylesheet" type="text/css"  href="{% static 'tomonotomo/css/style.css' %}">
+{% compress css %}
 <link rel="stylesheet" type="text/css" href="{% static 'tomonotomo/css/jquery.gritter.css' %}">
-<link media="screen" type="text/css" href="{% static 'tomonotomo/css/kwicks-slider.css' %}" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="{% static 'tomonotomo/css/kwicks-slider.css' %}">
+
+{% if ismobile %}
+<link rel="stylesheet" type="text/css" href="{% static 'tomonotomo/css/mobile-style.css' %}">
+{% endif %}
+{% endcompress %}
 
 <link rel="icon" type="image/png" href="{% static 'tomonotomo/img/favicon.ico' %}">
 
+{% compress js %}
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.js' %}"></script>
-<script src="{% static 'tomonotomo/js/script.js' %}"></script><meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
-<script type="text/javascript" src="{% static 'tomonotomo/js/superfish.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/script.js' %}"></script>
+{% endcompress %}
+{% compress js %}
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.responsivemenu.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.mobilemenu.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/superfish.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.easing.1.3.js' %}"></script>
-<script src="{% static 'tomonotomo/js/jquery.kwicks-1.5.1.js' %}" type="text/javascript"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.kwicks-1.5.1.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.horizontalNav.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.flexslider.js' %}"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}?v=2"></script>
 <script type="text/javascript" src="{% static 'tomonotomo/js/jquery.gritter.js' %}"></script>
+{% endcompress %}
 <script>
   $(window).load(function() { 
 		$('.full-width').horizontalNav({});
@@ -83,8 +94,8 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script>
 	<header>
 		<div class="container_12">
 			<div class="grid_12">
-				<div id="heading-tomonotomo" style="font-size:44px;color:black;vertical-align:bottom;white-space:nowrap"><a href="/home">tomo-no-tomo<span style="font-size:15%;color:black"> (alpha) </span></a></div>
-				<div class="links" style="padding-top:24px;text-align:left">
+				<div id="heading-tomonotomo" style="font-size:44px;color:black;vertical-align:bottom;white-space:nowrap"><a href="/home">tomo-no-tomo</a></div>
+				<div id="login-tomonotomo" class="links" style="padding-top:24px;text-align:left">
 					{% if request.user.id %}
 						<a href="/profile" target="_blank">{{ request.user.first_name }}</a> - <a href="/logout">Logout</a> - {{ quota }} Quota Points <img style="width:20px;height:20px" src="{% static 'tomonotomo/img/credits.gif' %}"/> 
 					{% else %}
