--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -57,7 +57,7 @@
 	$.ajax({
 	  url: "{% url 'preparePotentialList' %}",
 	}).done(function() {
-	  console.log('Prepared Potenital List');
+	  console.log('Tomonotomo - Prepared Potenital List');
 	});
 
 </script>
