Faster Tomonotomo - JS Later

--- a/tomonotomo/templates/tomonotomo/loggedin.html
+++ b/tomonotomo/templates/tomonotomo/loggedin.html
@@ -53,12 +53,16 @@
 	</div>
 </div>
 
+{% endblock %}
+
+{% block jquerycontent %}
+
 <script type="text/javascript">
 
 	$.ajax({
 	  url: "{% url 'preparePotentialList' %}",
 	}).done(function() {
-	  console.log('Tomonotomo - Prepared Potenital List');
+	  console.log('Tomonotomo - Prepared Potential List');
 	  $("#preparePotentialText1").hide();
           $("#preparePotentialText2").show();	  
 	});
