--- a/tomonotomo/templates/tomonotomo/base.html
+++ b/tomonotomo/templates/tomonotomo/base.html
@@ -25,27 +25,6 @@
 
 <link rel="icon" type="image/png" href="{% static 'tomonotomo/img/favicon.ico' %}">
 
-{% compress js %}
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/script.js' %}"></script>
-{% endcompress %}
-{% compress js %}
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.responsivemenu.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.mobilemenu.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/superfish.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.easing.1.3.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.kwicks-1.5.1.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.horizontalNav.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.flexslider.js' %}"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}?v=2"></script>
-<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.gritter.js' %}"></script>
-{% endcompress %}
-<script>
-  $(window).load(function() { 
-		$('.full-width').horizontalNav({});
-    });
-</script>
-
 <!-- Now showing gritter on mobile -->
 <style type="text/css">
 
@@ -64,8 +43,8 @@
     </a>
   </div>
 <![endif]-->
+
 <!--[if lt IE 9]>
-<script type="text/javascript" src="{% static 'tomonotomo/js/html5.js' %}"></script>
 
 <link rel="stylesheet" type="text/css" media="screen" href="{% static 'tomonotomo/css/ie.css' %}">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -73,13 +52,6 @@
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
 
 <![endif]-->
-<!-- start Mixpanel -->
-<script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
-typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
-b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
-mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script>
-<!-- end Mixpanel -->
-
 </head>
 <body>
 
@@ -127,6 +99,31 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");</script>
 	<div class="container_12">Tomonotomo © 2013| <a href='{% url "index" %}'>Home</a> | <a href='{% url "about" %}'>About</a> | <a href='{% url "terms" %}'>Terms</a> | <a href='http://www.tomonotomo.wordpress.com'>Blog</a> </div>
 </footer>
 
+{% compress js %}
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/script.js' %}"></script>
+{% endcompress %}
+{% compress js %}
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.responsivemenu.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.mobilemenu.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/superfish.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.easing.1.3.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.kwicks-1.5.1.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.horizontalNav.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.flexslider.js' %}"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.leanModal.min.js' %}?v=2"></script>
+<script type="text/javascript" src="{% static 'tomonotomo/js/jquery.gritter.js' %}"></script>
+{% endcompress %}
+<script>
+  $(window).load(function() { 
+                $('.full-width').horizontalNav({});
+    });
+</script>
+
+<!--[if lt IE 9]>
+<script type="text/javascript" src="{% static 'tomonotomo/js/html5.js' %}"></script>
+<![endif]-->
+
 <script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f);b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==
 typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");for(g=0;g<i.length;g++)f(c,i[g]);
 b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
@@ -147,5 +144,8 @@ mixpanel.init("00870579855cee982a5cc4d3f13ca9b4");
   ga('send', 'pageview');
 
 </script>
+
+{% block jquerycontent %}
+{% endblock %}
 
 </body></html>
