--- a/tomonotomo/templates/tomonotomo/personalprofile.html
+++ b/tomonotomo/templates/tomonotomo/personalprofile.html
@@ -71,7 +71,7 @@
         <div class="block">
                 <span>FoFs for whom {{ fullname }} asked friends for introduction</span>
                 {% for user in connectfriendslist %}
-                        <a href="http://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
+                        <a href="https://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
                 {% endfor %}
         </div>
         </div>
@@ -82,7 +82,7 @@
 	<div class="block">
 		<span>FoFs {{ fullname }} connected directly with</span>
 		{% for user in connectdirectlist %}
-			<a href="http://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
+			<a href="https://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
 		{% endfor %}
 	</div>
 	</div>
@@ -93,7 +93,7 @@
         <div class="block">
                 <span>FoFs {{ fullname }} admires secretly</span>
                 {% for user in admirelist %}
-                        <a href="http://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
+                        <a href="https://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
                 {% endfor %}
         </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="block">
                 <span>FoFs who connected with {{ fullname }} directly</span>
                 {% for user in connecteddirectlybylist %}
-                        <a href="http://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
+                        <a href="https://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
                 {% endfor %}
         </div>
         </div>
@@ -115,7 +115,7 @@
         <div class="block">
                 <span>FoFs {{ fullname }} marked as never show</span>
                 {% for user in nevershowlist %}
-                        <a href="http://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
+                        <a href="https://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
                 {% endfor %}
         </div>
         </div>
@@ -126,7 +126,7 @@
         <div class="block">
                 <span>{{ fullname }}'s Most Admired Friends</span>
                 {% for user in mostadmiredfriends %}
-                        <a href="http://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
+                        <a href="https://www.tomonotomo.com/profile/{{ user }}" target="_blank"><img src="https://graph.facebook.com/{{ user }}/picture?type=square"/ style="padding:2px"></a>
                 {% endfor %}
         </div>
         </div>
