--- a/tomonotomo/templates/tomonotomo/profile.html
+++ b/tomonotomo/templates/tomonotomo/profile.html
@@ -238,7 +238,7 @@
                                     history.back();
                                     break;
                                 case 39:
-                                    $(location).attr('href','http://www.tomonotomo.com/tntAction/{{ fbid }}/5/0');
+                                    $(location).attr('href','https://www.tomonotomo.com/tntAction/{{ fbid }}/5/0');
                                     break;
                             }
 };
